9-September-2011 Michael Babker
+ Add sr-RS translation

8-September-2011 Michael Babker
+ Add work from Olaf