@@ -3,12 +3,24 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Double quotes in the values have to be encoded as "_QQ_"
 
+COM_PLUGINS_BUZZ_FIELDSET_LABEL="Google Buzz Options"
 COM_PLUGINS_DISPLAY_FIELDSET_LABEL="Display Options"
 COM_PLUGINS_FACEBOOK_FIELDSET_LABEL="Facebook Like Options"
 COM_PLUGINS_GOOGLE_FIELDSET_LABEL="Google +1 Options"
 COM_PLUGINS_LINKEDIN_FIELDSET_LABEL="Linkedin Share Options"
 COM_PLUGINS_TWITTER_FIELDSET_LABEL="Twitter Share Options"
 PLG_CONTENT_YETANOTHERSOCIAL="Content - Yet Another Social Plugin"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_DESCRIPTION="The layout for the Google Buzz button.  The count layouts display a count of the number of Buzz posts, the normal layouts display only the button, and the link layout displays a text link."
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_LABEL="Buzz Button Layout"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_OPTION_LINK="Text Link"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_OPTION_NORMAL_BUTTON="Normal Sized Button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_OPTION_SMALL_BUTTON="Small Sized Button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_OPTION_NORMAL_COUNT="Normal Sized with Count"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_STYLE_OPTION_SMALL_COUNT="Small Sized with Count"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_TEXT_DESCRIPTION="Optional text to display with the post"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_BUZZ_TEXT_LABEL="Message Text"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_BUZZ_DESCRIPTION="Choose to display a Google Buzz button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_BUZZ_LABEL="Display Google Buzz"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_CATEGORIES_DESCRIPTION="Choose the categories to display the selected buttons in"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_CATEGORIES_LABEL="Category Selection"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_FACEBOOK_DESCRIPTION="Choose to display a Facebook Like button"
@@ -78,4 +90,4 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_DESCRIPTION="A user to indica
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_LABEL="Twitter Username"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_RELATED_DESCRIPTION="A related account, this is on every page (appends "_QQ_"related @user"_QQ_" to the share tweet)"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_RELATED_LABEL="Related Twitter Account"
-PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display Twitter's Share, Google's +1, Linkedin Share and Facebook's Like buttons"
+PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display an assortment of social networking buttons."
