@@ -5,4 +5,4 @@
 
 PLG_CONTENT_YETANOTHERSOCIAL="Content - Yet Another Social Plugin"
 PLG_CONTENT_YETANOTHERSOCIAL_ERROR_J17="Yet Another Social Plugin requires Joomla! 1.7 or newer"
-PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display Twitter's Share, Google's +1, and Facebook's Like buttons"
+PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display an assortment of social networking buttons."
