@@ -7,6 +7,6 @@
 * @license    GNU/GPL - http://www.gnu.org/copyleft/gpl.html
 */
 
-.yetanothersocial-facebook, .yetanothersocial-google, .yetanothersocial-linkedin, .yetanothersocial-twitter {
+.yetanothersocial-buzz, .yetanothersocial-facebook, .yetanothersocial-google, .yetanothersocial-linkedin, .yetanothersocial-twitter {
 	float: left;
 }
